关于mall项目的一次适应性更改

--- a/.env.development
+++ b/.env.development
@@ -3,4 +3,5 @@ ENV = 'development'
 
 # base api
 #VUE_APP_BASE_API = '/dev-api'
-VUE_APP_BASE_API = 'http://106.14.141.115:8080'
+VUE_APP_BASE_API = 'http://106.14.141.115:8090'
+#VUE_APP_BASE_API = 'http://10.118.247.93:8090'
